--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -2,7 +2,7 @@
   "name": "crawler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
