--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,12 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "db:check": {
+      "cache": false
+    },
+    "db:push": {
+      "cache": false
     }
   }
 }
