--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "pnpm build && node dist/index.js",
-    "lint": "eslint ./src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +15,19 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "5.5.4",
     "typescript-eslint": "^8.13.0"
+  },
+  "dependencies": {
+    "@ulixee/hero-playground": "2.0.0-alpha.30",
+    "puppeteer": "^23.7.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
