--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@ulixee/hero-playground": "2.0.0-alpha.30",
     "puppeteer": "^23.7.0",
+    "dotenv": "^16.4.5",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "@repo/database": "workspace:*"
   }
 }
