--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "database",
+  "name": "@repo/database",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
+    "start": "tsc",
     "db:check": "drizzle-kit check",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -19,6 +21,7 @@
     "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "postgres": "^3.4.5"
