--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,9 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+    "start": {
+      "dependsOn": ["^start"]
+    },
     "lint": {
       "dependsOn": ["^lint"]
     },
@@ -18,6 +21,9 @@
       "cache": false
     },
     "db:push": {
+      "cache": false
+    },
+    "db:studio": {
       "cache": false
     }
   }
