ref: separate into sepcific functions

--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -24,12 +24,14 @@
     "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.72",
+    "@repo/database": "workspace:*",
     "@ulixee/hero-playground": "2.0.0-alpha.30",
-    "puppeteer": "^23.7.0",
+    "ai": "^3.4.33",
     "dotenv": "^16.4.5",
+    "puppeteer": "^23.7.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "@repo/database": "workspace:*"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
